cloudin-midall/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloudin-midall-mysql
  labels:
    app: cloudin-midall-mysql
spec:
  serviceName: cloudin-midall-mysql
  replicas: 1
  selector:
    matchLabels:
      app: cloudin-midall-mysql
  template:
    metadata:
      labels:
        app: cloudin-midall-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 100m
              memory: 512Mi
            requests:
              cpu: 80m
              memory: 128Mi
