cloudin-midall/templates/mysql_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudin-midall-mysql
  labels:
    app: cloudin-midall-mysql
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: cloudin-midall-mysql
