cloudin-midall/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cloudin-midall
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudin-midall
            port:
              number: 5000
      - path: /mysql
        pathType: Prefix
        backend:
          service:
            name: cloudin-midall
            port:
              number: 3306
